# RayPongC

./: .gitignore  CMakeLists.txt  README.md
res/: crt.fs
src/: main.c
src/entities/: ball.c  ball.h  paddle.c  paddle.h
src/game/: ball.c  ball.h  game.c  game.h  paddle.c  paddle.h  sounds.c  sounds.h  ui.c  ui.h
src/system/: game.c  game.h  sounds.c  sounds.h  ui.c  ui.h
